assets/themes/DIYtheme/css/screen.css
/* screen.css
 *
 * A clean, simple stylesheet that aims for
 * a consistent vertical rhythm.
 *
 * Base font height: 16px
 * Base line length: 24px
 *
 * AUTHOR: Spy <wjj474957860@gmail.com>
 */

/* @全局reset */
body,div,dl,dt,dd,ul,ol,li,pre,form,fieldset,p,blockquote,th,td,abbr { margin:0; padding:0;}
h1,h2,h3,h4,h5,h6{
    padding: 0;
}
h1{
    font-size: 1.5em;
}
h2{
    font-size: 1.2em;
}
h3{
    font-size: 1em;
}
/* @结束 */

body {
    font-family:'微软雅黑',Arial,Palatino, georgia, "times new roman", serif;
    background-color: #e8e8e8;
    background-position: center -18em;
    background-repeat: repeat-x;
    color: #444;
}
/* 响应式设计——流图像 */
body img {
    max-width: 100%;
    height: auto;
    margin: 0 auto;
    display: table-cell;
}
/* Hack via Joel Spolsky to make image rescaling nicer in IE */
img { -ms-interpolation-mode:bicubic; }

/* IE6 ignores this and uses default size of 16px */
html>body { font-size:16px; }
p {
    margin-top:0.5em;
    text-align: justify;
}

a { text-decoration: none; color: #48A9E7; }
a:hover { text-decoration: underline;}

hr {
    border-top: 1px solid silver;
    border-bottom: none;
    padding: 0;
    margin: 1.46em 0 0;
}

sup { line-height: 1ex; }

#page, .ds-thread {
    background: white;
    padding: 1em;
    border: 1px solid #ccc;
}

#page,#footer,.ds-thread{
    width: 80%;
    margin: 0 auto;
}
#page{
    margin-top: 3em;
}
/* More experimental CSS3 features */
#page, .ds-thread {
    -webkit-box-shadow: 0 2px 6px #aaa;
    -moz-box-shadow: 0 2px 6px #aaa;
    -o-box-shadow: 0 2px 6px #aaa;
    box-shadow: 0 2px 6px #aaa;
}

#disqus_thread { padding-top: 1em; margin-top: 0.5em; }

/* @group FancyFirst */
.emphnext + p:first-letter, p.emphfirst:first-letter {
    font-size: 48px;
    padding: 0 0.15em 0 0;
    margin:  0.05em 0 -0.15em 0;
    line-height: 1em;
    float: left;
}

.emphnext + p:first-line, p.emphfirst:first-line {
    font-variant: small-caps;
    font-size: larger;
}
/* @end */

.right { float: right; clear: left; }
.left { float: left; clear: right; }
.inset {
    border: 1px solid silver;
    padding: 2px;
    margin: 0 0.8em 0.8em;
}
.right.inset { margin-right: 0 !important; }
.left.inset { margin-left: 0 !important; }
.quiet {
    color: grey;
    font-size: 0.875em;
    line-height: 1.714em;
}

/* 将文字缩排 */
blockquote {
    padding: 0 2.8em;
    margin: 1.714em 0;
    color: #444;
    font-size: 0.875em;
    line-height: 1.714em;
}

.note {
    padding-top: 0.5em;
    background-color: #fafaff;
    border-top: 1px solid silver;
    border-bottom: 1px solid silver;
}
/* @group Table */
table.neat {
    width: 80%;
    margin: 1.5em auto 1.5em auto;
    table-layout: fixed;
    border-spacing: 0;
}
table.neat tr { text-align: center; }
table.neat th { font-weight: normal; background-color: #eeeeee; }
table.neat td { background-color: white; }
table.neat th.title { border-bottom: 1px solid gray; border-top: 1px solid gray; vertical-align: bottom; background-color: lightgrey; }
caption {
    color: #333;
    font-size: 0.875em;
    margin: 0.875em auto 0 auto;
    line-height: 1.14em;
    text-align: justify;
}
/* @group Lists */
ul li {
    list-style-type: square;
    list-style-position: inside;
}
ol li {
    list-style-type: decimal;
    list-style-position: inside;
}
dt { font-weight: bold;}
dd { margin: 0 0 1.5em 0; text-align: justify; }

ul.compact { margin: 0; padding: 0;}
ul.compact li {
    list-style-type: square;
    list-style-position: inside;
}
ul.compact li span.date {
    display: none;
    color: grey;
    width: 20%;
}
ul.compact li a {
    width: 70%;
}
/* @end */

/* @group Header */
.header a { color: #48A9E7;}
.header a:hover { color: #fff;text-decoration: none; }

.header {
    width: 100%;
    border-top: 2px solid #48A9E7;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
    height: 40px;
    position: fixed;
    _position: absolute;
    top: 0;
    left: 0;
    background: url(../images/page/nav_bg.png) repeat-x 0 0;
    z-index: 9999;
    margin-bottom: 0;
}
.nav {
    width: 80%;
    height: 100%;
    margin: 0 auto;
}
.nav li { display: inline; font-size: 1.2em;}
.nav li a {
    line-height: 40px;
    padding: 0 5px;
    display: inline-block;
}
.search_input {
    width: 4em;
    padding: 5px 10px;
    position: absolute;
    right: 0;
    top: 2px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 20px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
    -moz-transition: width 0.5s;
    -webkit-transition: width 0.5s;
    -o-transition: width 0.5s;
    -ms-transition: width 0.5s;
    transition: width 0.5s;
}

.search_input:hover {
    width: 10em;
}

/* @group Twitter */
#twitter_update_list { display: inline; margin: 0; }
#twitter_update_list li { display: inline; margin: 0;}
.twitter-title { display: inline; margin: 0; }
.twitter-title a { display: inline; }
/* @end */

body#Work .header a.work,
body#Home .header a.home,
body#Play .header a.play,
body#Info .header a.info,
body#Code .header a.code,
body#Past .header a.past,
body#Kith .header a.kith
{
    border-bottom: 2px solid silver;
}

/* @end */

/* @group Footnotes */
.footnotes { color: grey; }
.footnotes:hover { color: black; }
.footnotes ol li {
    list-style-type: decimal;
    list-style-position: inside;
    font-size: 75%;
    line-height: 1.5em;
}
.footnotes ol li > a { display: none; }
/* @end */

/* @group Sections */
.section {
    font-size: 87.5%;
    line-height: 1.43em;
    margin-bottom: 1.43em;
    margin-top: 1.43em;
    margin-left: 7.5em;
    padding-right: 3em;
}
.section h1 {
    font-family: Palatino, georgia, serif;
    font-size: 100%;
    line-height: 1.43em;
    position: absolute;
    width: 6em;
    max-width: 6em;
    margin-left: -7.5em;
    font-weight: bold;
    font-variant: small-caps;
}
.section p { margin-bottom: 1.43em; }

/* @end */

.list .title { font-weight: bold; }
p.line { position: relative; margin: 0; }
p.excerpt { margin: 0; }
.comments { font-size: smaller; position: absolute; color: silver; right: 0; top: 0; }
.excerpt { color: black; }

/* @group Signature */
.signature {
    margin-top: 3em;
    position: relative;
}
.signature .author {
    font-variant: small-caps;
    font-style: normal;
    color: black;
    display: block;
    margin-bottom: 1.5em;
}
.signature .date {
    font-size: 87.5%;
    line-height: 1.5em;
    display: block;
    font-variant: small-caps;
    font-style: normal;
    position: absolute;
    right: 0;
    top: 0;
}
.signature .location {
    display: block;
    font-size: 87.5%;
    line-height: 1.5em;
    position: absolute;
    right: 0;
    top: 1.5em;
}
/* @end */

/* @group Code */
pre {
    margin: 1em 0 1.5em 0;
    font-size: 0.75em; /* Hack to make code look same size as body font */
    line-height: 1.5em;
    color: #111;
    background: #fffff0;
    border: 1px solid #ddc;
    padding: 0.5em 1em;
    overflow: hidden;

    /* Experimental CSS3 stuff */
    box-shadow: 1px 1px 6px #ccc;
    -webkit-box-shadow: 1px 1px 6px #ccc;
    -moz-box-shadow: 1px 1px 6px #ccc;
}
pre:hover {
    border-right: none;
    overflow: visible;
}
code {
    font-size: 1em;
    background-color: #ddd;
    line-height: 1.4em;
    padding: 1px 5px;
    -webkit-border-radius: 5px;
    -o-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
pre > code {
    background-color: transparent;
}
/* @end */


/* @group Disqus */
#disqus_thread {
    margin-top: 0.5em;
}
.dsq-comment-body {
    text-align: justify;
    line-height: 1.29em;
}
.dsq-comment {
    padding-top: 0 !important;
    margin-top: 1.7em !important;
    margin-bottom: 1.9em !important;
    background-image: none !important;
}
.dsq-comment-message {
    line-height: 1.714em;
}
.dsq-comment-header {
    background-color: whitesmoke !important;
    border-top: 1px solid silver !important;
    border-bottom: 1px solid silver !important;
    margin-bottom: 1.15em !important;
}
.dsq-header-time { margin-left: 0 !important; }
.dsq-comment-header cite {
    font-variant: small-caps;
    margin-left: 0 !important;
}
.dsq-comment-footer {
    font-size: 75% !important;
    margin-top: 1px !important;
}
#dsq-options {
    background: whitesmoke;
    border-bottom: 1px solid silver;
    border-top: 1px solid silver;
    padding: 0 0 0 1em;
}
#dsq-comments-count {
    margin-top: 0.8em !important;
    margin-bottom: 1.2em !important;
}
#dsq-extra-links { padding-left: 0 !important; }
#dsq-extra-links li img { display: none; }
#dsq-options-toggle { color: silver; font-size: 75% !important;}
#dsq-add-new-comment {
    margin-top: 1.19em !important;
    margin-bottom: 1.25em !important;
}
/* The following position, width and height ensure
 * that none of the body in the iframe shows through.
 */
form#comment {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: white !important;
}
/* @end */

/* @group LibraryThing */
span.LTtitle { display: none; }
div.LTitem { display: inline; margin-right: 0.7em; }
div.LTprovided { display: none; }
/* @end */

/* @group Last.fm */
#lastfm a { margin-right: 0.7em; }
/* @end */

/* @group Delicious */
.delicious-posts { }
.delicious-posts ul, .delicious-posts li, .delicious-banner { margin: 0; padding: 0 }
.delicious-posts li { list-style-position: outside; margin-bottom: 1em; margin-left: 1em; text-align: justify; }
.delicious-post { }
.delicious-banner { display: none; }
.delicious-posts a:hover { }
.delicious-posts a { }
.delicious-post a { font-weight: bold; }
p.delicious-extended { font-size: 100%; display: inline; }
p.delicious-extended:before { content: ' — '; }
/* @end */

/* @group Footer */
#footer {
    color: grey;
}
#footer address {
    position: relative;
    margin: .2em 0;
}
#footer a {
    font-variant: small-caps;
    font-style: normal;
    color: #77d;
    text-decoration: none;
}
#footer .copyright {
    display: block;
}
#footer .engine {
}
/* @end */

/* @group Figures and images */
dl.figure {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    text-align: center;
}

dl.figure dd {
    color: #333;
    font-size: 0.875em;
    margin: 0.875em auto 0 auto;
    line-height: 1.14em;
    text-align: justify;
    width: 85%;
}
/* @end */

/* @group Equations */
div.maruku-equation { display: block ;text-align: center; }
div.maruku-equation img.maruku-png { position: relative; top: -0.75em;}
span.maruku-inline { }
img.maruku-png { }
/* @end */

/* .prev-next */
.prev-next {
    position:relative;
}
.prev-next .next{
    float:right;
}
/* tag_box ======================================================== */
.tag_box {
    list-style:none;
    margin:0;
    padding:5px 0 ;
    overflow:hidden;
}
.tag_box li {
    list-style:none;
    line-height:1.8em;
}

.tag_box.inline li {
    float:left;
}

.tag_box a {
    padding: 3px;
    margin: 2px;
    background: #eee;
    border-radius: 3px;
    border:1px dashed #48A9E7;
    text-decoration:none;
}
.tag_box a span{
    vertical-align:super;
    font-size:0.8em;
}

.tag_box a.active {
    background:#57A957;
    border:1px solid #4C964D;
    color:#FFF;
}

